src/objects/roomreport__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>service__r.Equipment__r.Name</formula>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentname__c</fullName>
        <formula>service__r.Equipmentname__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentunittype__c</fullName>
        <formula>service__r.Equipment__r.RecordType.Name</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1isdimesnsional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否符合房间尺寸要求</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actualcase__c</fullName>
        <label>路线要求实际测量情况</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <formula>service__r.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>airflow__c</fullName>
        <label>气流情况</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assessmentresult__c</fullName>
        <label>电路评估结果：</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>符合电源要求</fullName>
                </value>
                <value>
                    <fullName>不符合电源要求</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <formula>service__r.customer__r.Name</formula>
        <label>客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dehumidifiernum__c</fullName>
        <label>除湿器个数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>TEXT(person__r.department__c)</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detail__c</fullName>
        <label>描述内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>评估工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EC6O</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>estimatedate__c</fullName>
        <label>评估日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hige__c</fullName>
        <label>评估结果：高：</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hnmidity__c</fullName>
        <label>湿度%</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hnmidityendtime__c</fullName>
        <label>湿度波动终止时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hnmidityfw__c</fullName>
        <label>湿度波动范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hnmidityfwhour__c</fullName>
        <formula>temperatureendtime__c  -  temperaturestarttime__c</formula>
        <label>#湿度波动时间范围（小时）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hnmidityfwhournew__c</fullName>
        <label>湿度波动时间范围（小时）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hnmiditystarttime__c</fullName>
        <label>湿度波动起始时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hnmiditytesttime__c</fullName>
        <label>湿度测量时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdianya__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否电源电压：单相，230V±10%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdy1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否零地电压：小于5V</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否UPS电源：3kVA(稳压电源)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否额定电流：16A，慢熔</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>islj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否连接：230V/16A/3极</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ispl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否频率：50/60Hz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>istemperature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>结果是否符合温度标准</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isyc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否延迟时间：半小时以上</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <formula>person__r.landline__c</formula>
        <label>座机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>long__c</fullName>
        <label>评估结果：长：</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>overallresult__c</fullName>
        <label>整体建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>手术室评估</relationshipLabel>
        <relationshipName>onPa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <formula>person__r.phone__c</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <formula>service__r.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>综合评估结果</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>符合安装要求</fullName>
                </value>
                <value>
                    <fullName>不符合安装要求</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>service__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>手术室评估</relationshipLabel>
        <relationshipName>OPeR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>进行中</fullName>
                    <default>true</default>
                    <label>进行中</label>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>style__c</fullName>
        <label>记录类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新机安装</fullName>
                </value>
                <value>
                    <fullName>移机安装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>suggest__c</fullName>
        <label>建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>temperature__c</fullName>
        <label>温度℃</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperatureendtime__c</fullName>
        <label>温度波动终止时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>temperaturestarttime__c</fullName>
        <label>温度波动起始时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>temperaturesuggest__c</fullName>
        <label>温湿度建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>temperaturetime__c</fullName>
        <formula>temperatureendtime__c  -  temperaturestarttime__c</formula>
        <label>#温度波动时间范围（小时）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>temperaturetimehorizon__c</fullName>
        <label>温度波动范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperaturetimenew__c</fullName>
        <label>温度波动时间范围（小时）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testtime__c</fullName>
        <label>温度测量时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wide__c</fullName>
        <label>评估结果：宽：</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>手术室评估</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>S-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>手术室评估</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>